set nginx readOnlyRootFileSystem to false
Signed-off-by: ShuzZzle <niclas.schad@gmail.com>

--- a/values.yaml
+++ b/values.yaml
@@ -1054,7 +1054,7 @@ nginx:
 
   containerSecurityContext:
     enabled: true
-    readOnlyRootFilesystem: true
+    readOnlyRootFilesystem: false
 
   strategy:
     type: RollingUpdate
