Enable / Disable Security Context (#158)
* feat: You can enable/disable security context

Signed-off-by: Parham Alvani <parham.alvani@gmail.com>

* feat: Update Changelog

Signed-off-by: Parham Alvani <parham.alvani@gmail.com>

* chore: Remove Black Line

Signed-off-by: Parham Alvani <parham.alvani@gmail.com>

* feat: Update Changelog

Signed-off-by: Parham Alvani <parham.alvani@gmail.com>

* chore: Remove Execute Flag from Files

Signed-off-by: Parham Alvani <parham.alvani@gmail.com>

* feat: Add Pod Security Context

Signed-off-by: Parham Alvani <parham.alvani@gmail.com>

* feat: Update README

Signed-off-by: Parham Alvani <parham.alvani@gmail.com>

* feat: Add Pod Security Context

Signed-off-by: Parham Alvani <parham.alvani@gmail.com>

* fix: Correct Security Context Name

Signed-off-by: Parham Alvani <parham.alvani@gmail.com>

* fix CHANGELOG.md

Signed-off-by: ShuzZzle <niclas.schad@gmail.com>

* fix CHANGELOG.md

Signed-off-by: ShuzZzle <niclas.schad@gmail.com>

* add newline back to CHANGELOG.md

Signed-off-by: ShuzZzle <niclas.schad@gmail.com>

* fix containerSecurity identation level

Signed-off-by: ShuzZzle <niclas.schad@gmail.com>

* set nginx readOnlyRootFileSystem to false

Signed-off-by: ShuzZzle <niclas.schad@gmail.com>

Co-authored-by: ShuzZzle <niclas.schad@gmail.com>

--- a/templates/alertmanager/alertmanager-dep.yaml
+++ b/templates/alertmanager/alertmanager-dep.yaml
@@ -38,8 +38,9 @@ spec:
     {{- if .Values.alertmanager.priorityClassName }}
       priorityClassName: {{ .Values.alertmanager.priorityClassName }}
     {{- end }}
-      securityContext:
-        {{- toYaml .Values.alertmanager.securityContext | nindent 8 }}
+      {{- if .Values.alertmanager.securityContext.enabled }}
+      securityContext: {{- omit .Values.alertmanager.securityContext "enabled" | toYaml | nindent 8 }}
+      {{- end }}
       initContainers:
         {{- toYaml .Values.alertmanager.initContainers | nindent 8 }}
       {{- if .Values.image.pullSecrets }}
@@ -85,8 +86,9 @@ spec:
             {{- toYaml .Values.alertmanager.readinessProbe | nindent 12 }}
           resources:
             {{- toYaml .Values.alertmanager.resources | nindent 12 }}
-          securityContext:
-            readOnlyRootFilesystem: true
+          {{- if .Values.alertmanager.containerSecurityContext.enabled }}
+          securityContext: {{- omit .Values.alertmanager.containerSecurityContext "enabled" | toYaml | nindent 12 }}
+          {{- end }}
           env:
             {{- if .Values.alertmanager.env }}
               {{- toYaml .Values.alertmanager.env | nindent 12 }}
