--- a/templates/role.yaml
+++ b/templates/role.yaml
@@ -5,10 +5,7 @@ metadata:
   name: {{ template "cortex.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ template "cortex.name" . }}
-    chart: {{ template "cortex.chart" . }}
-    heritage: {{ .Release.Service }}
-    release: {{ .Release.Name }}
+    {{- include "cortex.labels" . | nindent 4 }}
 rules:
 - apiGroups: [""] # "" indicates the core API group
   resources: ["configmaps", "secrets"]
