--- a/templates/alertmanager/alertmanager-statefulset.yaml
+++ b/templates/alertmanager/alertmanager-statefulset.yaml
@@ -98,49 +98,49 @@ spec:
         {{- if .Values.alertmanager.extraContainers }}
         {{ toYaml .Values.alertmanager.extraContainers | nindent 8 }}
         {{- end }}
-        {{- if .Values.sidecar.alertmanager.enabled }}
+        {{- if .Values.alertmanager.sidecar.enabled }}
         - name: {{ template "cortex.name" . }}-sc-alertmanager
-          {{- if .Values.sidecar.image.sha }}
-          image: "{{ .Values.sidecar.image.repository }}:{{ .Values.sidecar.image.tag }}@sha256:{{ .Values.sidecar.image.sha }}"
+          {{- if .Values.alertmanager.sidecar.image.sha }}
+          image: "{{ .Values.alertmanager.sidecar.image.repository }}:{{ .Values.alertmanager.sidecar.image.tag }}@sha256:{{ .Values.alertmanager.sidecar.image.sha }}"
           {{- else }}
-          image: "{{ .Values.sidecar.image.repository }}:{{ .Values.sidecar.image.tag }}"
+          image: "{{ .Values.alertmanager.sidecar.image.repository }}:{{ .Values.alertmanager.sidecar.image.tag }}"
           {{- end }}
-          imagePullPolicy: {{ .Values.sidecar.imagePullPolicy }}
+          imagePullPolicy: {{ .Values.alertmanager.sidecar.imagePullPolicy }}
           env:
-            {{- if .Values.sidecar.alertmanager.watchMethod }}
+            {{- if .Values.alertmanager.sidecar.watchMethod }}
             - name: METHOD
-              value: {{ .Values.sidecar.alertmanager.watchMethod }}
+              value: {{ .Values.alertmanager.sidecar.watchMethod }}
             {{ end }}
             - name: LABEL
-              value: "{{ .Values.sidecar.alertmanager.label }}"
-            {{- if .Values.sidecar.alertmanager.labelValue }}
+              value: "{{ .Values.alertmanager.sidecar.label }}"
+            {{- if .Values.alertmanager.sidecar.labelValue }}
             - name: LABEL_VALUE
-              value: {{ quote .Values.sidecar.alertmanager.labelValue }}
+              value: {{ quote .Values.alertmanager.sidecar.labelValue }}
             {{- end }}
             - name: FOLDER
-              value: "{{ .Values.sidecar.alertmanager.folder }}{{- with .Values.sidecar.alertmanager.defaultFolderName }}/{{ . }}{{- end }}"
+              value: "{{ .Values.alertmanager.sidecar.folder }}{{- with .Values.alertmanager.sidecar.defaultFolderName }}/{{ . }}{{- end }}"
             - name: RESOURCE
               value: "both"
-            {{- if .Values.sidecar.enableUniqueFilenames }}
+            {{- if .Values.alertmanager.sidecar.enableUniqueFilenames }}
             - name: UNIQUE_FILENAMES
               value: "{{ .Values.sidecar.enableUniqueFilenames }}"
             {{- end }}
-            {{- if .Values.sidecar.alertmanager.searchNamespace }}
+            {{- if .Values.alertmanager.sidecar.searchNamespace }}
             - name: NAMESPACE
-              value: "{{ .Values.sidecar.alertmanager.searchNamespace }}"
+              value: "{{ .Values.alertmanager.sidecar.searchNamespace }}"
             {{- end }}
-            {{- if .Values.sidecar.skipTlsVerify }}
+            {{- if .Values.alertmanager.sidecar.skipTlsVerify }}
             - name: SKIP_TLS_VERIFY
               value: "{{ .Values.sidecar.skipTlsVerify }}"
             {{- end }}
-            {{- if .Values.sidecar.alertmanager.folderAnnotation }}
+            {{- if .Values.alertmanager.sidecar.folderAnnotation }}
             - name: FOLDER_ANNOTATION
-              value: "{{ .Values.sidecar.alertmanager.folderAnnotation }}"
+              value: "{{ .Values.alertmanager.sidecar.folderAnnotation }}"
           {{- end }}
           resources:
-            {{- toYaml .Values.sidecar.resources | nindent 12 }}
+            {{- toYaml .Values.alertmanager.sidecar.resources | nindent 12 }}
           securityContext:
-            {{- toYaml .Values.sidecar.alertmanager.securityContext | nindent 12 }}
+            {{- toYaml .Values.alertmanager.sidecar.securityContext | nindent 12 }}
           volumeMounts:
             - name: storage
               mountPath: "/data"
