--- a/templates/rolebinding.yaml
+++ b/templates/rolebinding.yaml
@@ -1,4 +1,4 @@
-{{- if or .Values.sidecar.rules.enabled .Values.sidecar.alertmanager.enabled }}
+{{- if or .Values.ruler.sidecar.enabled .Values.alertmanager.sidecar.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
