--- a/templates/clusterrolebinding.yaml
+++ b/templates/clusterrolebinding.yaml
@@ -1,16 +1,16 @@
 {{- if or .Values.ruler.sidecar.enabled .Values.alertmanager.sidecar.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
-  name: {{ template "cortex.fullname" . }}
-  namespace: {{ .Release.Namespace }}
+  name: {{ template "cortex.fullname" . }}-clusterrolebinding
   labels:
-    {{- include "cortex.labels" . | nindent 4 }}
+  {{- include "cortex.labels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: {{ template "cortex.fullname" . }}
+  kind: ClusterRole
+  name: {{ template "cortex.fullname" . }}-clusterrole
 subjects:
   - kind: ServiceAccount
     name: {{ template "cortex.serviceAccountName" . }}
+    namespace: {{ .Release.Namespace }}
 {{- end }}
