--- a/templates/alertmanager/alertmanager-statefulset.yaml
+++ b/templates/alertmanager/alertmanager-statefulset.yaml
@@ -99,6 +99,53 @@ spec:
         {{- if .Values.alertmanager.extraContainers }}
         {{ toYaml .Values.alertmanager.extraContainers | nindent 8 }}
         {{- end }}
+        {{- if .Values.alertmanager.sidecar.enabled }}
+        - name: {{ template "cortex.name" . }}-sc-alertmanager
+          {{- if .Values.alertmanager.sidecar.image.sha }}
+          image: "{{ .Values.alertmanager.sidecar.image.repository }}:{{ .Values.alertmanager.sidecar.image.tag }}@sha256:{{ .Values.alertmanager.sidecar.image.sha }}"
+          {{- else }}
+          image: "{{ .Values.alertmanager.sidecar.image.repository }}:{{ .Values.alertmanager.sidecar.image.tag }}"
+          {{- end }}
+          imagePullPolicy: {{ .Values.alertmanager.sidecar.imagePullPolicy }}
+          env:
+            {{- if .Values.alertmanager.sidecar.watchMethod }}
+            - name: METHOD
+              value: {{ .Values.alertmanager.sidecar.watchMethod }}
+            {{ end }}
+            - name: LABEL
+              value: "{{ .Values.alertmanager.sidecar.label }}"
+            {{- if .Values.alertmanager.sidecar.labelValue }}
+            - name: LABEL_VALUE
+              value: {{ quote .Values.alertmanager.sidecar.labelValue }}
+            {{- end }}
+            - name: FOLDER
+              value: "{{ .Values.alertmanager.sidecar.folder }}{{- with .Values.alertmanager.sidecar.defaultFolderName }}/{{ . }}{{- end }}"
+            - name: RESOURCE
+              value: "both"
+            {{- if .Values.alertmanager.sidecar.enableUniqueFilenames }}
+            - name: UNIQUE_FILENAMES
+              value: "{{ .Values.alertmanager.sidecar.enableUniqueFilenames }}"
+            {{- end }}
+            {{- if .Values.alertmanager.sidecar.searchNamespace }}
+            - name: NAMESPACE
+              value: "{{ .Values.alertmanager.sidecar.searchNamespace }}"
+            {{- end }}
+            {{- if .Values.alertmanager.sidecar.skipTlsVerify }}
+            - name: SKIP_TLS_VERIFY
+              value: "{{ .Values.alertmanager.sidecar.skipTlsVerify }}"
+            {{- end }}
+            {{- if .Values.alertmanager.sidecar.folderAnnotation }}
+            - name: FOLDER_ANNOTATION
+              value: "{{ .Values.alertmanager.sidecar.folderAnnotation }}"
+          {{- end }}
+          resources:
+            {{- toYaml .Values.alertmanager.sidecar.resources | nindent 12 }}
+          securityContext:
+            {{- toYaml .Values.alertmanager.sidecar.securityContext | nindent 12 }}
+          volumeMounts:
+            - name: storage
+              mountPath: "/data"
+        {{- end}}
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
