--- a/templates/ruler/ruler-dep.yaml
+++ b/templates/ruler/ruler-dep.yaml
@@ -49,6 +49,53 @@ spec:
       {{- end}}
       {{- end }}
       containers:
+        {{- if .Values.ruler.sidecar.enabled }}
+        - name: {{ template "cortex.name" . }}-sc-rules
+          {{- if .Values.ruler.sidecar.image.sha }}
+          image: "{{ .Values.ruler.sidecar.image.repository }}:{{ .Values.ruler.sidecar.image.tag }}@sha256:{{ .Values.ruler.sidecar.image.sha }}"
+          {{- else }}
+          image: "{{ .Values.ruler.sidecar.image.repository }}:{{ .Values.ruler.sidecar.image.tag }}"
+          {{- end }}
+          imagePullPolicy: {{ .Values.ruler.sidecar.imagePullPolicy }}
+          env:
+            {{- if .Values.ruler.sidecar.watchMethod }}
+            - name: METHOD
+              value: {{ .Values.ruler.sidecar.watchMethod }}
+            {{ end }}
+            - name: LABEL
+              value: "{{ .Values.ruler.sidecar.label }}"
+            {{- if .Values.ruler.sidecar.labelValue }}
+            - name: LABEL_VALUE
+              value: {{ quote .Values.ruler.sidecar.labelValue }}
+            {{- end }}
+            - name: FOLDER
+              value: "{{ .Values.ruler.sidecar.folder }}{{- with .Values.ruler.sidecar.defaultFolderName }}/{{ . }}{{- end }}"
+            - name: RESOURCE
+              value: "both"
+            {{- if .Values.ruler.sidecar.enableUniqueFilenames }}
+            - name: UNIQUE_FILENAMES
+              value: "{{ .Values.ruler.sidecar.enableUniqueFilenames }}"
+            {{- end }}
+            {{- if .Values.ruler.sidecar.searchNamespace }}
+            - name: NAMESPACE
+              value: "{{ .Values.ruler.sidecar.searchNamespace }}"
+            {{- end }}
+            {{- if .Values.ruler.sidecar.skipTlsVerify }}
+            - name: SKIP_TLS_VERIFY
+              value: "{{ .Values.ruler.sidecar.skipTlsVerify }}"
+            {{- end }}
+            {{- if .Values.ruler.sidecar.folderAnnotation }}
+            - name: FOLDER_ANNOTATION
+              value: "{{ .Values.ruler.sidecar.folderAnnotation }}"
+          {{- end }}
+          resources:
+            {{- toYaml .Values.ruler.sidecar.resources | nindent 12 }}
+          securityContext:
+            {{- toYaml .Values.ruler.sidecar.securityContext | nindent 12 }}
+          volumeMounts:
+            - name: sc-rules-volume
+              mountPath: {{ .Values.ruler.sidecar.folder | quote }}
+        {{- end}}
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
@@ -73,6 +120,10 @@ spec:
             {{- if .Values.ruler.extraVolumeMounts }}
               {{ toYaml .Values.ruler.extraVolumeMounts | nindent 12}}
             {{- end }}
+            {{- if .Values.ruler.sidecar.enabled }}
+            - name: sc-rules-volume
+              mountPath: {{ .Values.ruler.sidecar.folder | quote }}
+            {{ end }}
             - name: config
               mountPath: /etc/cortex
             - name: storage
@@ -136,4 +187,8 @@ spec:
 {{- end }}
         - name: storage
           emptyDir: {}
+{{- if .Values.ruler.sidecar.enabled }}
+        - name: sc-rules-volume
+          emptyDir: {}
+{{- end }}
 {{- end }}
