add honorLabels=true and options to configure metric- and relabelings
Signed-off-by: ShuzZzle <niclas.schad@gmail.com>

--- a/templates/compactor/compactor-servicemonitor.yaml
+++ b/templates/compactor/compactor-servicemonitor.yaml
@@ -27,4 +27,13 @@ spec:
     {{- if .Values.compactor.serviceMonitor.scrapeTimeout }}
     scrapeTimeout: {{ .Values.compactor.serviceMonitor.scrapeTimeout }}
     {{- end }}
+    honorLabels: true
+    {{- if .Values.compactor.serviceMonitor.relabelings }}
+    relabelings:
+    {{- toYaml .Values.compactor.serviceMonitor.relabelings | nindent 4 }}
+    {{- end }}
+    {{- if .Values.compactor.serviceMonitor.metricRelabelings }}
+    metricRelabelings:
+    {{- toYaml .Values.compactor.serviceMonitor.metricRelabelings | nindent 4 }}
+    {{- end }}
 {{- end }}
