--- a/templates/ingester/ingester-servicemonitor.yaml
+++ b/templates/ingester/ingester-servicemonitor.yaml
@@ -27,4 +27,13 @@ spec:
     {{- if .Values.ingester.serviceMonitor.scrapeTimeout }}
     scrapeTimeout: {{ .Values.ingester.serviceMonitor.scrapeTimeout }}
     {{- end }}
+    honorLabels: true
+    {{- if .Values.ingester.serviceMonitor.relabelings }}
+    relabelings:
+    {{- toYaml .Values.ingester.serviceMonitor.relabelings | nindent 4 }}
+    {{- end }}
+    {{- if .Values.ingester.serviceMonitor.metricRelabelings }}
+    metricRelabelings:
+    {{- toYaml .Values.ingester.serviceMonitor.metricRelabelings | nindent 4 }}
+    {{- end }}
 {{- end }}
