--- a/templates/store-gateway/store-gateway-servicemonitor.yaml
+++ b/templates/store-gateway/store-gateway-servicemonitor.yaml
@@ -27,4 +27,13 @@ spec:
     {{- if .Values.store_gateway.serviceMonitor.scrapeTimeout }}
     scrapeTimeout: {{ .Values.store_gateway.serviceMonitor.scrapeTimeout }}
     {{- end }}
+    honorLabels: true
+    {{- if .Values.store_gateway.serviceMonitor.relabelings }}
+    relabelings:
+    {{- toYaml .Values.store_gateway.serviceMonitor.relabelings | nindent 4 }}
+    {{- end }}
+    {{- if .Values.store_gateway.serviceMonitor.metricRelabelings }}
+    metricRelabelings:
+    {{- toYaml .Values.store_gateway.serviceMonitor.metricRelabelings | nindent 4 }}
+    {{- end }}
 {{- end }}
