--- a/values.yaml
+++ b/values.yaml
@@ -184,6 +184,8 @@ alertmanager:
   serviceMonitor:
     enabled: false
     additionalLabels: {}
+    relabelings: []
+    metricRelabelings: []
 
   resources: {}
   #  limits:
@@ -372,6 +374,8 @@ distributor:
   serviceMonitor:
     enabled: false
     additionalLabels: {}
+    relabelings: []
+    metricRelabelings: []
 
   resources: {}
   #  limits:
@@ -466,6 +470,8 @@ ingester:
   serviceMonitor:
     enabled: false
     additionalLabels: {}
+    relabelings: []
+    metricRelabelings: []
 
   resources: {}
   #  limits:
@@ -600,6 +606,8 @@ ruler:
   serviceMonitor:
     enabled: false
     additionalLabels: {}
+    relabelings: []
+    metricRelabelings: []
 
   resources: {}
   #  limits:
@@ -734,6 +742,8 @@ querier:
   serviceMonitor:
     enabled: false
     additionalLabels: {}
+    relabelings: []
+    metricRelabelings: []
 
   resources: {}
   #  limits:
@@ -822,6 +832,8 @@ query_frontend:
   serviceMonitor:
     enabled: false
     additionalLabels: {}
+    relabelings: []
+    metricRelabelings: []
 
   resources: {}
   #  limits:
@@ -909,6 +921,8 @@ table_manager:
   serviceMonitor:
     enabled: false
     additionalLabels: {}
+    relabelings: []
+    metricRelabelings: []
 
   resources: {}
   #  limits:
@@ -986,6 +1000,8 @@ configs:
   serviceMonitor:
     enabled: false
     additionalLabels: {}
+    relabelings: []
+    metricRelabelings: []
 
   resources: {}
   #  limits:
@@ -1075,6 +1091,8 @@ nginx:
   serviceMonitor:
     enabled: false
     additionalLabels: {}
+    relabelings: []
+    metricRelabelings: []
 
   resources: {}
   #  limits:
@@ -1151,6 +1169,8 @@ store_gateway:
   serviceMonitor:
     enabled: false
     additionalLabels: {}
+    relabelings: []
+    metricRelabelings: []
 
   resources: {}
   #  limits:
@@ -1275,6 +1295,8 @@ compactor:
   serviceMonitor:
     enabled: false
     additionalLabels: {}
+    relabelings: []
+    metricRelabelings: []
 
   resources: {}
   #  limits:
