--- a/templates/store-gateway/store-gateway-svc-headless.yaml
+++ b/templates/store-gateway/store-gateway-svc-headless.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "cortex.storeGatewayFullname" . }}
+  name: {{ include "cortex.storeGatewayFullname" . }}-headless
   labels:
     {{- include "cortex.storeGatewayLabels" . | nindent 4 }}
     {{- with .Values.store_gateway.service.labels }}
