--- a/templates/table-manager/table-manager-servicemonitor.yaml
+++ b/templates/table-manager/table-manager-servicemonitor.yaml
@@ -27,4 +27,12 @@ spec:
     {{- if .Values.table_manager.serviceMonitor.scrapeTimeout }}
     scrapeTimeout: {{ .Values.table_manager.serviceMonitor.scrapeTimeout }}
     {{- end }}
+    {{- if .Values.table_manager.serviceMonitor.relabelings }}
+    relabelings:
+    {{- toYaml .Values.table_manager.serviceMonitor.relabelings | nindent 4 }}
+    {{- end }}
+    {{- if .Values.table_manager.serviceMonitor.metricRelabelings }}
+    metricRelabelings:
+    {{- toYaml .Values.table_manager.serviceMonitor.metricRelabelings | nindent 4 }}
+    {{- end }}
 {{- end }}
