--- a/templates/alertmanager/alertmanager-servicemonitor.yaml
+++ b/templates/alertmanager/alertmanager-servicemonitor.yaml
@@ -27,4 +27,12 @@ spec:
     {{- if .Values.alertmanager.serviceMonitor.scrapeTimeout }}
     scrapeTimeout: {{ .Values.alertmanager.serviceMonitor.scrapeTimeout }}
     {{- end }}
+    {{- if .Values.alertmanager.serviceMonitor.relabelings }}
+    relabelings:
+    {{- toYaml .Values.alertmanager.serviceMonitor.relabelings | nindent 4 }}
+    {{- end }}
+    {{- if .Values.alertmanager.serviceMonitor.metricRelabelings }}
+    metricRelabelings:
+    {{- toYaml .Values.alertmanager.serviceMonitor.metricRelabelings | nindent 4 }}
+    {{- end }}
 {{- end }}
