--- a/templates/query-frontend/query-frontend-servicemonitor.yaml
+++ b/templates/query-frontend/query-frontend-servicemonitor.yaml
@@ -27,4 +27,12 @@ spec:
     {{- if .Values.query_frontend.serviceMonitor.scrapeTimeout }}
     scrapeTimeout: {{ .Values.query_frontend.serviceMonitor.scrapeTimeout }}
     {{- end }}
+    {{- if .Values.query_frontend.serviceMonitor.relabelings }}
+    relabelings:
+    {{- toYaml .Values.query_frontend.serviceMonitor.relabelings | nindent 4 }}
+    {{- end }}
+    {{- if .Values.query_frontend.serviceMonitor.metricRelabelings }}
+    metricRelabelings:
+    {{- toYaml .Values.query_frontend.serviceMonitor.metricRelabelings | nindent 4 }}
+    {{- end }}
 {{- end }}
