--- a/templates/store-gateway/store-gateway-svc.yaml
+++ b/templates/store-gateway/store-gateway-svc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "cortex.storeGatewayFullname" . }}-headless
+  name: {{ include "cortex.storeGatewayFullname" . }}
   labels:
     {{- include "cortex.storeGatewayLabels" . | nindent 4 }}
     {{- with .Values.store_gateway.service.labels }}
@@ -12,12 +12,11 @@ metadata:
     {{- toYaml .Values.store_gateway.service.annotations | nindent 4 }}
 spec:
   type: ClusterIP
-  clusterIP: None
   ports:
-    - port: {{ .Values.config.server.grpc_listen_port }}
+    - port: {{ .Values.config.server.http_listen_port }}
       protocol: TCP
-      name: grpc
-      targetPort: grpc
+      name: http-metrics
+      targetPort: http-metrics
   selector:
     {{- include "cortex.storeGatewaySelectorLabels" . | nindent 4 }}
 {{- end -}}
