fix containerPort for some components
Signed-off-by: ShuzZzle <niclas.schad@gmail.com>

--- a/templates/distributor/distributor-dep.yaml
+++ b/templates/distributor/distributor-dep.yaml
@@ -73,6 +73,9 @@ spec:
             - name: gossip
               containerPort: {{ .Values.config.memberlist.bind_port }}
               protocol: TCP
+            - name: grpc
+              containerPort: {{ .Values.config.server.grpc_listen_port }}
+              protocol: TCP
           startupProbe:
             {{- toYaml .Values.distributor.startupProbe | nindent 12 }}
           livenessProbe:
