--- a/templates/ingester/ingester-statefulset.yaml
+++ b/templates/ingester/ingester-statefulset.yaml
@@ -129,6 +129,9 @@ spec:
               containerPort: {{ .Values.config.server.http_listen_port }}
               protocol: TCP
             - name: grpc
+              containerPort: {{ .Values.config.server.grpc_listen_port }}
+              protocol: TCP
+            - name: gossip
               containerPort: {{ .Values.config.memberlist.bind_port }}
               protocol: TCP
           startupProbe:
