--- a/templates/alertmanager/alertmanager-svc-headless.yaml
+++ b/templates/alertmanager/alertmanager-svc-headless.yaml
@@ -20,6 +20,7 @@ spec:
     - port: {{ $clusterPort }}
       protocol: TCP
       name: cluster
+      targetPort: cluster
   selector:
     {{- include "cortex.alertmanagerSelectorLabels" . | nindent 4 }}
 {{- end -}}
