adjust and fix some services (#169)
* removed http-metrics port from every headless service and added ClusterIP service with http-metrics port to every component who before only had an headless service before

Signed-off-by: ShuzZzle <niclas.schad@gmail.com>

* add PR number to CHANGELOG

Signed-off-by: ShuzZzle <niclas.schad@gmail.com>

* fix containerPort for some components

Signed-off-by: ShuzZzle <niclas.schad@gmail.com>

* add clusterPort to alertmanager statefulset

Signed-off-by: ShuzZzle <niclas.schad@gmail.com>

--- a/templates/alertmanager/alertmanager-svc-headless.yaml
+++ b/templates/alertmanager/alertmanager-svc-headless.yaml
@@ -17,12 +17,10 @@ spec:
   clusterIP: None
   publishNotReadyAddresses: true
   ports:
-    - port: {{ .Values.config.server.http_listen_port }}
-      protocol: TCP
-      name: http-metrics
     - port: {{ $clusterPort }}
       protocol: TCP
       name: cluster
+      targetPort: cluster
   selector:
     {{- include "cortex.alertmanagerSelectorLabels" . | nindent 4 }}
 {{- end -}}
