check for updated README.md in CI
Signed-off-by: Tom Hayward <thayward@infoblox.com>

--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -35,6 +35,11 @@ jobs:
       - name: Run chart-testing (lint)
         run: ct lint --config ct.yaml
 
+      - name: Updated README.md
+        run: |
+          make README.md
+          git diff --exit-code -- README.md
+
       - name: Create kind cluster
         uses: helm/kind-action@v1.2.0
 
