--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -2,9 +2,14 @@ name: Lint and Test Charts
 
 on:
   push:
-    branches:
+    branches-ignore:
+      - master
       - main
   pull_request:
+    paths-ignore:
+      - '*.md'
+      - 'docs/**'
+      - 'tools/**'
 
 jobs:
   lint-test:
@@ -34,11 +39,6 @@ jobs:
 
       - name: Run chart-testing (lint)
         run: ct lint --config ct.yaml
-
-      - name: Updated README.md
-        run: |
-          make README.md
-          git diff --exit-code -- README.md
 
       - name: Create kind cluster
         uses: helm/kind-action@v1.2.0
