--- a/values.yaml
+++ b/values.yaml
@@ -162,8 +162,16 @@ config:
           timeout: 1s
   ruler:
     enable_alertmanager_discovery: false
+    # -- Enable the experimental ruler config api.
+    enable_api: false
+    # -- Method to use for backend rule storage (configdb, azure, gcs, s3, swift, local) refer to https://cortexmetrics.io/docs/configuration/configuration-file/#ruler_config
+    storage: {}
   alertmanager:
+    # -- Enable the experimental alertmanager config api.
+    enable_api: false
     external_url: '/api/prom/alertmanager'
+    # -- Type of backend to use to store alertmanager configs. Supported values are: "configdb", "gcs", "s3", "local". refer to: https://cortexmetrics.io/docs/configuration/configuration-file/#alertmanager_config
+    storage: {}
   frontend:
     #  max_outstanding_per_tenant: 1000
     log_queries_longer_than: 10s
