enable autoscaling in the CI
It is not expected that the autoscaling will trigger in the CI, but including it will validate the manifest.

Signed-off-by: Tom Hayward <thayward@infoblox.com>

--- a/ci/test-values.yaml
+++ b/ci/test-values.yaml
@@ -57,9 +57,15 @@ config:
 
 ingester:
   replicas: 1
+  autoscaling:
+    enabled: true
+    minReplicas: 1
   statefulSet:
     enabled: true
 distributor:
   replicas: 1
+  autoscaling:
+    enabled: true
+    minReplicas: 1
 nginx:
   replicas: 1
