fix memberlist service in ci/test-values.yaml
Signed-off-by: ShuzZzle <niclas.schad@gmail.com>

--- a/ci/test-values.yaml
+++ b/ci/test-values.yaml
@@ -53,7 +53,7 @@ config:
 
   memberlist:
     join_members:
-    - "cortex-memberlist.cortex"
+      - "{{.Release.Name}}-memberlist.cortex"
 
 ingester:
   replicas: 1
