fix store gateway service dns address in ci/test-values.yaml
Signed-off-by: ShuzZzle <niclas.schad@gmail.com>

--- a/ci/test-values.yaml
+++ b/ci/test-values.yaml
@@ -49,7 +49,7 @@ config:
       dir: "/data/store"
 
   querier:
-    store_gateway_addresses: "dns+cortex-store-gateway-headless:9095"
+    store_gateway_addresses: "dns+{{.Release.Name}}-store-gateway-headless:9095"
 
   memberlist:
     join_members:
