--- a/templates/ruler/ruler-dep.yaml
+++ b/templates/ruler/ruler-dep.yaml
@@ -127,6 +127,8 @@ spec:
             {{ end }}
             - name: config
               mountPath: /etc/cortex
+            - name: runtime-config
+              mountPath: /etc/cortex-runtime-config
             - name: storage
               mountPath: /data
               subPath: {{ .Values.ruler.persistence.subPath }}
@@ -176,6 +178,9 @@ spec:
             {{- else }}
             secretName: {{ template "cortex.fullname" . }}
             {{- end }}
+        - name: runtime-config
+          configMap:
+            name: {{ template "cortex.fullname" . }}-runtime-config
         - name: tmp
           emptyDir: {}
         {{- range $dir, $_ := .Values.ruler.directories }}
