add service monitors TLS support
Signed-off-by: Dan Constantinescu <dconstantinescu@blackberry.com>

--- a/templates/distributor/distributor-servicemonitor.yaml
+++ b/templates/distributor/distributor-servicemonitor.yaml
@@ -36,4 +36,9 @@ spec:
     metricRelabelings:
     {{- toYaml .Values.distributor.serviceMonitor.metricRelabelings | nindent 4 }}
     {{- end }}
+    {{- if .Values.compactor.serviceMonitor.tls.enabled }}
+    scheme: HTTPS
+    tlsConfig:
+    {{- toYaml .Values.compactor.serviceMonitor.tls.config | nindent 6 }}
+    {{- end }}
 {{- end }}
