--- a/templates/store-gateway/store-gateway-servicemonitor.yaml
+++ b/templates/store-gateway/store-gateway-servicemonitor.yaml
@@ -36,9 +36,9 @@ spec:
     metricRelabelings:
     {{- toYaml .Values.store_gateway.serviceMonitor.metricRelabelings | nindent 4 }}
     {{- end }}
-    {{- if .Values.compactor.serviceMonitor.tls.enabled }}
+    {{- if .Values.store_gateway.serviceMonitor.tls.enabled }}
     scheme: HTTPS
     tlsConfig:
-    {{- toYaml .Values.compactor.serviceMonitor.tls.config | nindent 6 }}
+    {{- toYaml .Values.store_gateway.serviceMonitor.tls.config | nindent 6 }}
     {{- end }}
 {{- end }}
